# AVS_HW_2

./: CMakeLists.txt  main.cpp
Container/: container.cpp  container.h
Plane/: plane.cpp  plane.h
Ship/: ship.cpp  ship.h
Train/: train.cpp  train.h
Transport/: transport.cpp  transport.h
tests/: out1.txt  out2.txt  test01.txt  test_0.txt  test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
